T180090 Fix the timestamp overlap

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,6 +6,15 @@ $font-size-base: 0.875rem;
 
 @import '~bootstrap/scss/_functions';
 @import "~bootstrap/scss/_variables";
+
+$grid-breakpoints: map-merge($grid-breakpoints, (
+	xxl: 2000px
+));
+
+$container-max-widths: map-merge($container-max-widths, (
+	xxl: 1960px
+));
+
 @import "~bootstrap/scss/bootstrap";
 
 $timeline-width: 0.25em;
@@ -136,7 +145,8 @@ body {
 				background-color: lighten(map-get($timeline-bg, "right"), 5%);
 			}
 		}
-		.timestamp {
+		.timestamp,
+		.timelapse {
 			@extend .text-right;
 		}
 	}
